--- a/style.css
+++ b/style.css
@@ -30,5 +30,35 @@ ul{
 a{
     text-decoration: none;
     font-size: 18px;
-    color: #E5E7Eb;
+    color: #E5E7EB;
+}
+
+.website{
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.lower{
+    display: flex;
+}
+
+.lower2{
+    width: 500px;
+    margin-right: 250px;
+}
+
+.subtext{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button{
+    background-color: #3882F6;
+    color: white;
+    font-size: large;
+    border-radius: 15%;
+    width: 125px;
+    height: 30px;
+    margin-bottom: 100px;
 }
