--- a/style.css
+++ b/style.css
@@ -75,3 +75,10 @@ button{
     text-align: center;
     margin: 30px;
 }
+
+.image{
+    width: 150px;
+    height: 150px;
+    border: 3px solid blue;
+    border-radius: 20%;
+}
