--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ a{
     width: 500px;
     height: 250px;
     background-color: gray;
-    align-items: center;
+    margin-bottom: 50px;
+    margin-left: 100px;
 }
 
 .subtext{
