Flexbox centered on main axis, subtext width changed to 150px

--- a/style.css
+++ b/style.css
@@ -88,4 +88,10 @@ button{
 
 .container-two{
     display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+.sub{
+    width: 150px;
+    height: auto;
 }
