--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ button{
 .image{
     width: 150px;
     height: 150px;
-    border: 3px solid blue;
-    border-radius: 20%;
+    border: 3px solid #3882F6;
+    border-radius: 10%;
 }
 
 .container-two{
@@ -94,4 +94,6 @@ button{
 .sub{
     width: 150px;
     height: auto;
+    margin-bottom: 150px;
+    text-align: center;
 }
