--- a/style.css
+++ b/style.css
@@ -97,3 +97,18 @@ button{
     margin-bottom: 150px;
     text-align: center;
 }
+
+.container-three{
+    background-color: #E5E7EB;
+}
+
+.quote,
+.author{
+    margin-left: 150px;
+    margin-right: 150px;
+}
+
+.quote{
+    font-size: 36px;
+    color: #1F2937;
+}
