Padding in box created, flexbox made for Sign Up button and subtext

--- a/style.css
+++ b/style.css
@@ -123,4 +123,11 @@ button{
     width: 800px;
     margin: 100px;
     border-radius: 20px;
+    padding: 50px;
+    display: flex;
+}
+
+.text-box{
+    display: flex;
+    flex-direction: column;
 }
